renamed:    dotfiles.png -> docs/assets/img/dotfiles.png 	new file:   docs/zsh-wsl2-ubuntu.md 	new file:   install.sh 	new file:   roles/alias/.alias 	new file:   roles/git/.gitconfig 	new file:   roles/git/.gitignore__global 	new file:   roles/p10k/.p10k.zsh 	renamed:    ssh/README.md -> roles/ssh/README.md 	renamed:    ssh/config -> roles/ssh/config 	new file:   roles/wsl2/.wslconfig 	renamed:    wsl2/README.md -> roles/wsl2/README.md 	new file:   roles/zfuncs/docker 	new file:   roles/zfuncs/wsl 	new file:   roles/zsh/.zshrc 	new file:   scripts/functions.sh 	deleted:    wsl2/.wslconfig

--- a/roles/ssh/config
+++ b/roles/ssh/config
@@ -1,6 +1,8 @@
 # Windows: %UserProfile%\.ssh\config
 # linux: ~/.ssh/config
 
+IdentityFile /home/rodney/.ssh/id_ed25519
+
 Host *
 	HostKeyAlgorithms=*
 	KexAlgorithms +diffie-hellman-group1-sha1
