--- a/roles/git/.gitconfig
+++ b/roles/git/.gitconfig
@@ -15,5 +15,6 @@
     cmd = code --wait --diff
 [alias]
 	ncommit = commit --allow-empty-message -m ''
+	tree = log --decorate --oneline --graph --all
 [includeIf "gitdir:~/projects/verzel/bayer/"]
 	path = ~/projects/verzel/bayer/.gitconfig.bayer
