--- a/roles/git/.gitconfig
+++ b/roles/git/.gitconfig
@@ -5,7 +5,7 @@
 [core]
 	editor = "code --wait"
 	excludesfile = ~/.gitignore__global
-
+    	sshCommand = ssh -i ~/.ssh/id_ed25519_github -F /dev/null
 [merge]
 	tool = vscode
 
@@ -22,6 +22,7 @@
 	ncommit = commit --allow-empty-message -m ''
 	tree = log --decorate --oneline --graph --all
 	undocommit = git reset HEAD~1 --soft
+	undoadd = git reset HEAD --
 
-[includeIf "gitdir:~/projects/verzel/bayer/"]
-	path = ~/.gitconfig.bayer
+[includeIf "gitdir:/home/rodney/projects/verzel/bayer/"]
+    path="/home/rodney/.gitconfig.bayer"
