--- a/roles/ssh/config
+++ b/roles/ssh/config
@@ -1,27 +1,30 @@
 # Windows: %UserProfile%\.ssh\config
 # linux: ~/.ssh/config
 
-IdentitiesOnly yes
-AddKeysToAgent yes
+#IdentitiesOnly yes
+#AddKeysToAgent yes
 
 Host alpha.voxme.me
   HostName alpha.voxme.me
   User ubuntu
   IdentityFile ~/.ssh/voxme-alpha-servers.pem
 
-Host github.com
-  HostName github.com
-  IdentityFile ~/.ssh/id_ed25519_github
+ Host github.com
+   HostName github.com
+#  IdentityFile ~/.ssh/id_ed25519_github
+  IdentityFile ~/.ssh/id_rsa_github_bayer
 
-Host bitbucket.org
-  HostName bitbucket.org
-  IdentityFile ~/.ssh/id_ed25519_bitbucket
+# Host bitbucket.org
+#  HostName bitbucket.org
+#  IdentityFile ~/.ssh/id_ed25519_bitbucket
 
-Host gitlab.com
-  HostName gitlab.com
-  IdentityFile ~/.ssh/id_rsa_gitlab
+# Host gitlab.com
+#  HostName gitlab.com
+#  IdentityFile ~/.ssh/id_rsa_gitlab
 
 Host *
-	HostKeyAlgorithms=*
-	KexAlgorithms +diffie-hellman-group1-sha1
-	Ciphers=aes128-ctr,aes128-cbc,aes192-ctr,aes192-cbc,aes256-ctr,aes256-cbc
+   AddKeysToAgent yes
+   
+   HostKeyAlgorithms=*
+   KexAlgorithms +diffie-hellman-group1-sha1
+   Ciphers=aes128-ctr,aes128-cbc,aes192-ctr,aes192-cbc,aes256-ctr,aes256-cbc
